[gd_scene load_steps=2]
[ext_resource type="Script" path="res://scripts/HUD.gd" id="1"]
[node name="HUD" type="CanvasLayer"]
script=ExtResource("1")
[node name="WaveLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
text = "WAVE 1"
[node name="GoldLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 110.0
text = "GOLD 100"
[node name="BaseLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 160.0
text = "BASE 100"
